Clearscreen OK + code improvements